# controller/resource.go
@@ -4,23 +4,52 @@ import (
 	"fmt"
 	"log"
 	"net/http"
+	"reflect"
 	"time"
 
 	config "restapi-oauth2-go/config"
 	model "restapi-oauth2-go/model"
 
+	echoserver "github.com/dasjott/oauth2-echo-server"
 	"github.com/labstack/echo"
 )
+
+// @Summary Get Access Token
+// @description API to generate access token
+// @Tags Authorization
+// @version 1.0
+// @accept application/json
+// @Param grant_type query string true "Grant type (example : password, refresh_token)"
+// @Param client_id query string true "Client id"
+// @Param client_secret query string true "Client secret"
+// @Param username query string false "used when grant_type=password"
+// @Param password query string false "used when grant_type=password"
+// @Param scope query string true "scope (example : read)"
+// @Param refresh_token query string false "used when grant_type=refresh_token"
+// @Success 200 {object} model.Tokensuccess
+// @failure 500 {object} model.ErrorToken
+// @router /oauth2/token [get]
+func (co *Controller) HandleTokenRequest(c echo.Context) error {
+	return echoserver.HandleTokenRequest(c)
+}
 
 // @Summary Get data all cake
 // @description API get all data cake
 // @Tags Cake
 // @version 1.0
-// @accept application/x-json-stream
+// @accept application/json
+// @Param Authorization header string true "Bearer Authorization"
 // @Success 200 {object} []model.Cake
 // @failure 400
-// @router /cakes [get]
+// @router /api/cakes [get]
 func (co *Controller) GetCake(c echo.Context) error {
+	userID := CheckuserID(c)
+	if userID == "" {
+		return c.JSON(http.StatusUnauthorized, map[string]string{
+			"message": "Unauthorize",
+		})
+
+	}
 	conn := co.NewConnection()
 	db := config.ConnectDB(conn.Server, conn.Port, conn.User, conn.Password, conn.Database)
 
@@ -51,12 +80,20 @@ func (co *Controller) GetCake(c echo.Context) error {
 // @description API get data cake by id
 // @Tags Cake
 // @version 1.0
-// @accept application/x-json-stream
+// @accept application/json
+// @Param Authorization header string true "Bearer Authorization"
 // @Param id path string true "id"
 // @Success 200 {object} []model.Cake
 // @failure 400
-// @router /cakes/{id} [get]
+// @router /api/cakes/{id} [get]
 func (co *Controller) GetCakebyId(c echo.Context) error {
+	userID := CheckuserID(c)
+	if userID == "" {
+		return c.JSON(http.StatusUnauthorized, map[string]string{
+			"message": "Unauthorize",
+		})
+
+	}
 	conn := co.NewConnection()
 	db := config.ConnectDB(conn.Server, conn.Port, conn.User, conn.Password, conn.Database)
 
@@ -96,12 +133,27 @@ func (co *Controller) GetCakebyId(c echo.Context) error {
 // @description API create data cake
 // @Tags Cake
 // @version 1.0
-// @accept application/x-json-stream
+// @accept application/json
+// @Param Authorization header string true "Bearer Authorization"
 // @Param cakebody body model.CreateCake true "Cake data"
 // @Success 200 {object} []model.CreateCake
 // @failure 400
-// @router /cakes [post]
+// @router /api/cakes [post]
 func (co *Controller) CreatePostCake(c echo.Context) error {
+	userID := CheckuserID(c)
+	if userID == "" {
+		return c.JSON(http.StatusUnauthorized, map[string]string{
+			"message": "Unauthorize",
+		})
+
+	} else {
+		if userID != "1" {
+			return c.JSON(http.StatusUnauthorized, map[string]string{
+				"message": "User token cannot access this resource",
+			})
+		}
+	}
+
 	conn := co.NewConnection()
 	db := config.ConnectDB(conn.Server, conn.Port, conn.User, conn.Password, conn.Database)
 	defer db.Close()
@@ -149,12 +201,27 @@ func (co *Controller) CreatePostCake(c echo.Context) error {
 // @description API delete data cake by id
 // @Tags Cake
 // @version 1.0
-// @accept application/x-json-stream
+// @accept application/json
+// @Param Authorization header string true "Bearer Authorization"
 // @Param id path string true "id"
 // @Success 200 {object} []model.MessageData
 // @failure 400
-// @router /cakes/{id} [delete]
+// @router /api/cakes/{id} [delete]
 func (co *Controller) DeleteCake(c echo.Context) error {
+	userID := CheckuserID(c)
+	if userID == "" {
+		return c.JSON(http.StatusUnauthorized, map[string]string{
+			"message": "Unauthorize",
+		})
+
+	} else {
+		if userID != "1" {
+			return c.JSON(http.StatusUnauthorized, map[string]string{
+				"message": "User token cannot access this resource",
+			})
+		}
+	}
+
 	conn := co.NewConnection()
 	db := config.ConnectDB(conn.Server, conn.Port, conn.User, conn.Password, conn.Database)
 
@@ -201,13 +268,28 @@ func (co *Controller) DeleteCake(c echo.Context) error {
 // @description API update data cake by id
 // @Tags Cake
 // @version 1.0
-// @accept application/x-json-stream
+// @accept application/json
+// @Param Authorization header string true "Bearer Authorization"
 // @Param id path string true "id"
 // @Param cakebody body model.UpdateCake true "Cake data"
 // @Success 200 {object} []model.UpdateCake
 // @failure 400
-// @router /cakes/{id} [patch]
+// @router /api/cakes/{id} [patch]
 func (co *Controller) UpdatePatchCake(c echo.Context) error {
+	userID := CheckuserID(c)
+	if userID == "" {
+		return c.JSON(http.StatusUnauthorized, map[string]string{
+			"message": "Unauthorize",
+		})
+
+	} else {
+		if userID != "1" {
+			return c.JSON(http.StatusUnauthorized, map[string]string{
+				"message": "User token cannot access this resource",
+			})
+		}
+	}
+
 	conn := co.NewConnection()
 	db := config.ConnectDB(conn.Server, conn.Port, conn.User, conn.Password, conn.Database)
 	defer db.Close()
@@ -256,4 +338,14 @@ func (co *Controller) UpdatePatchCake(c echo.Context) error {
 		"Status":  false,
 		"Message": errd.Error(),
 	})
+}
+
+func CheckuserID(c echo.Context) string {
+	ti := c.Get(echoserver.DefaultConfig.TokenKey)
+	if ti != "" {
+		r := reflect.ValueOf(ti)
+		f := reflect.Indirect(r).FieldByName("UserID")
+		return f.Interface().(string)
+	}
+	return ""
 }
