# docs/swagger.json
@@ -4,28 +4,34 @@
         "description": "This is restful api project using golang.",
         "title": "REST API PROJECT Golang",
         "contact": {
-            "name": "Tripang",
-            "url": "https://www.instagram.com/tripang_panggang/",
+            "name": "Ahmad Rifal Alfarisi",
+            "url": "https://www.instagram.com/tr_ipang/",
             "email": "rifalalfa1702@gmail.com"
-        },
-        "license": {
-            "name": "ahmadrifal"
         },
         "version": "version(1.0)"
     },
     "host": "localhost:1323",
-    "basePath": "/api",
+    "basePath": "/",
     "paths": {
-        "/cakes": {
+        "/api/cakes": {
             "get": {
                 "description": "API get all data cake",
                 "consumes": [
-                    "application/x-json-stream"
+                    "application/json"
                 ],
                 "tags": [
                     "Cake"
                 ],
                 "summary": "Get data all cake",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -44,13 +50,20 @@
             "post": {
                 "description": "API create data cake",
                 "consumes": [
-                    "application/x-json-stream"
+                    "application/json"
                 ],
                 "tags": [
                     "Cake"
                 ],
                 "summary": "Post data cake by id",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Cake data",
                         "name": "cakebody",
@@ -77,17 +90,24 @@
                 }
             }
         },
-        "/cakes/{id}": {
+        "/api/cakes/{id}": {
             "get": {
                 "description": "API get data cake by id",
                 "consumes": [
-                    "application/x-json-stream"
+                    "application/json"
                 ],
                 "tags": [
                     "Cake"
                 ],
                 "summary": "Get data cake by id",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "id",
@@ -114,13 +134,20 @@
             "delete": {
                 "description": "API delete data cake by id",
                 "consumes": [
-                    "application/x-json-stream"
+                    "application/json"
                 ],
                 "tags": [
                     "Cake"
                 ],
                 "summary": "Delete data cake by id",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "id",
@@ -147,13 +174,20 @@
             "patch": {
                 "description": "API update data cake by id",
                 "consumes": [
-                    "application/x-json-stream"
+                    "application/json"
                 ],
                 "tags": [
                     "Cake"
                 ],
                 "summary": "Patch data cake by id",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "id",
@@ -183,6 +217,80 @@
                     },
                     "400": {
                         "description": ""
+                    }
+                }
+            }
+        },
+        "/oauth2/token": {
+            "get": {
+                "description": "API to generate access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authorization"
+                ],
+                "summary": "Get Access Token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Grant type (example : password, refresh_token)",
+                        "name": "grant_type",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client id",
+                        "name": "client_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client secret",
+                        "name": "client_secret",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "used when grant_type=password",
+                        "name": "username",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "used when grant_type=password",
+                        "name": "password",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "scope (example : read)",
+                        "name": "scope",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "used when grant_type=refresh_token",
+                        "name": "refresh_token",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Tokensuccess"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorToken"
+                        }
                     }
                 }
             }
@@ -249,6 +357,19 @@
                 }
             }
         },
+        "model.ErrorToken": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "server_error"
+                },
+                "error_description": {
+                    "type": "string",
+                    "example": "The authorization server encountered an unexpected condition that prevented it from fulfilling the request"
+                }
+            }
+        },
         "model.MessageData": {
             "type": "object",
             "properties": {
@@ -257,6 +378,31 @@
                 },
                 "status": {
                     "type": "boolean"
+                }
+            }
+        },
+        "model.Tokensuccess": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string",
+                    "example": "FXMCFR5JOKIQZCKL11OOFW"
+                },
+                "expires_in": {
+                    "type": "integer",
+                    "example": 7200
+                },
+                "refresh_token": {
+                    "type": "string",
+                    "example": "TI3N8E_GUACZP6LLURBOCW"
+                },
+                "scope": {
+                    "type": "string",
+                    "example": "read"
+                },
+                "token_type": {
+                    "type": "string",
+                    "example": "Bearer"
                 }
             }
         },
@@ -286,13 +432,6 @@
                     "example": "tahu bulat"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "type": "apiKey",
-            "name": "access_token",
-            "in": "query"
         }
     }
 }
